--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,8 @@
     {{!-- Our CSS page --}}
     <link rel="stylesheet" href="./assets/css/style.css">
     {{!-- Our JS page --}}
-
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     <script src="/assets/js/crm.js"></script>
 
     <title>...</title>
@@ -33,5 +34,6 @@
 </head>
 
 <body>
+
     {{{ body }}}
 </body>
