added a sign up button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -138,10 +138,14 @@
 
 <!-- Page content holder -->
 <div class="page-content p-5" id="content">
-    <!-- Toggle button -->
-    <button id="sidebarCollapse" type="button" class="btn btn-dark bg-dark rounded-pill shadow-sm px-4 mb-4"><i
-            class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small></button>
+    <!-- Toggle button  & Sign Out -->
+    <div class="d-flex">
+        <div> <button id="sidebarCollapse" type="button" class="btn btn-dark bg-dark rounded-pill "><i
+                    class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small></button>
+        </div>
 
+        <div class="ml-auto"> <a href="#" class="justify-content-end">Sign Out</a></div>
+    </div>
     <!-- Demo content -->
     <h2 class="display-4 text-white">Bootstrap vertical nav</h2>
     <p class="lead text-white mb-0">Build a fixed sidebar using Bootstrap 4 vertical navigation and media objects.</p>
