moved the sign out button into the nav bar

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -19,10 +19,12 @@
 
 <!-- Vertical navbar -->
 <div class="vertical-nav bg-dark" id="sidebar">
-    <div class="py-4 px-3 mb-4 bg-dark">
+    <div class="py-4 px-3 mb-4 bg-light">
         <div class="media-body">
             <h4 class="font-weight-white text-muted mb-0">Verical Navbar</h4>
-            <p class="font-weight-grey text-muted mb-0">With HTML and Bootstrap</p>
+            <p class="font-weight-grey text-muted mb-0">With HTML and Bootstrap Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Saepe perferendis nostrum dolor fugiat at incidunt natus suscipit vero voluptatem
+                excepturi? Placeat molestias vitae at atque ipsam veniam officia illum adipisci!</p>
         </div>
     </div>
 
@@ -59,6 +61,9 @@
 
     <ul class="nav flex-column bg-dark mb-0">
         <li class="nav-item">
+            <a href="#" class="nav-link text-light font-italic">Sign Out</a>
+        </li>
+        {{!-- <li class="nav-item">
             <a href="#" class="nav-link text-light font-italic">
                 <i class="fa fa-area-chart mr-3 text-primary fa-fw"></i>
                 Area charts
@@ -81,7 +86,7 @@
                 <i class="fa fa-line-chart mr-3 text-primary fa-fw"></i>
                 Line charts
             </a>
-        </li>
+        </li> --}}
     </ul>
 </div>
 <!-- End vertical navbar -->
