--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -1,92 +1,39 @@
-{{!-- <div class="col-3" id="sidebar">
+<!-- Sidebar  -->
 
-    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
-            aria-controls="v-pills-home" aria-selected="true">Home</a>
-        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
-            aria-controls="v-pills-profile" aria-selected="false">Contact</a>
-        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab"
-            aria-controls="v-pills-messages" aria-selected="false">Messages</a>
-        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab"
-            aria-controls="v-pills-settings" aria-selected="false">Settings</a>
-    </div>
-</div>
- --}}
-
-
-
-
-
-<!-- Vertical navbar -->
-<div class="vertical-nav bg-dark" id="sidebar">
-    <div class="py-4 px-3 mb-4 bg-light">
-        <div class="media-body">
-            <h4 class="font-weight-white text-muted mb-0">Verical Navbar</h4>
-            <p class="font-weight-grey text-muted mb-0">With HTML and Bootstrap Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Saepe perferendis nostrum dolor fugiat at incidunt natus suscipit vero voluptatem
-                excepturi? Placeat molestias vitae at atque ipsam veniam officia illum adipisci!</p>
-        </div>
+<nav id="sidebar" class="text-center">
+    <div class="sidebar-header">
+        <img src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png"
+            alt="" id="profileImage">
+        <h3>John Smith</h3>
+        <strong>JS </strong>
     </div>
 
-    <p class="text-white font-weight-bold text-uppercase px-3 small pb-4 mb-0">Main</p>
+    <ul class="list-unstyled components">
 
-    <ul class="nav flex-column bg-dark mb-0">
-        <li class="nav-item">
-            <a href="#home" class="nav-link text-light font-italic bg-dark" id="dashBtn">
-                <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>
-                Dashboard
+        <li>
+            <a href="#">
+                <i class="fas fa-briefcase"></i>
+                About
+            </a>
+
+        </li>
+        <li>
+            <a href="#">
+                <i class="fas fa-image"></i>
+                Portfolio
             </a>
         </li>
-        <li class="nav-item">
-            <a href="#contact" class=" nav-link text-light font-italic" id="contactBtn">
-                <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>
-                Contacts
+        <li>
+            <a href="#">
+                <i class="fas fa-question"></i>
+                FAQ
             </a>
         </li>
-        <li class="nav-item">
-            <a href="#ticket" class="nav-link text-light font-italic" id="ticketBtn">
-                <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>
-                Tickets
-            </a>
-        </li>
-        <li class="nav-item">
-            <a href="#settings" class="nav-link text-light font-italic" id="settingBtn">
-                <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>
-                Settings
+        <li>
+            <a href="#">
+                <i class="fas fa-paper-plane"></i>
+                Contact
             </a>
         </li>
     </ul>
-
-    <p class="text-gray font-weight-bold text-uppercase px-3 small py-4 mb-0">Charts</p>
-
-    <ul class="nav flex-column bg-dark mb-0">
-        <li class="nav-item">
-            <a href="#" class="nav-link text-light font-italic">Sign Out</a>
-        </li>
-        {{!-- <li class="nav-item">
-            <a href="#" class="nav-link text-light font-italic">
-                <i class="fa fa-area-chart mr-3 text-primary fa-fw"></i>
-                Area charts
-            </a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link text-light font-italic">
-                <i class="fa fa-bar-chart mr-3 text-primary fa-fw"></i>
-                Bar charts
-            </a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link text-light font-italic">
-                <i class="fa fa-pie-chart mr-3 text-primary fa-fw"></i>
-                Pie charts
-            </a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link text-light font-italic">
-                <i class="fa fa-line-chart mr-3 text-primary fa-fw"></i>
-                Line charts
-            </a>
-        </li> --}}
-    </ul>
-</div>
-<!-- End vertical navbar -->
+</nav>
