changed the size of the profile picture and the length of the sidebar, fixed function in crm.js, made it so that you can see what each page will look like based off of what button will be clicked in sidebar, changed names and icons in sidebar, created a partial for the toggle button for the sidebar.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,8 +47,8 @@ span {
 }
 
 #sidebar.active {
-  min-width: 80px;
-  max-width: 80px;
+  min-width: 90px;
+  max-width: 90px;
 }
 
 #sidebar.active .sidebar-header h3,
@@ -87,8 +87,9 @@ span {
 }
 
 #sidebar .sidebar-header {
-  padding: 20px;
+  padding: 10%;
   background: #6d7fcc;
+  margin-bottom: 3%;
 }
 
 #sidebar .sidebar-header strong {
@@ -108,7 +109,14 @@ span {
 }
 
 #profileImage {
-  width: 75px;
-  height: 75px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
+}
+
+.content {
+  width: 100%;
+  padding: 20px;
+  min-height: 100vh;
+  transition: all 0.3s;
 }
