--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -1,7 +1,7 @@
 <!-- Sidebar  -->
 
-<nav id="sidebar" class="text-center">
-    <div class="sidebar-header">
+<nav id="sidebar">
+    <div class="sidebar-header text-center">
         <img src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png"
             alt="" id="profileImage">
         <h3>John Smith</h3>
@@ -11,28 +11,37 @@
     <ul class="list-unstyled components">
 
         <li>
-            <a href="#">
-                <i class="fas fa-briefcase"></i>
-                About
+            <a href="#home" id="dashBtn">
+                <i class="fas fa-th-large"></i>
+                Dashboard
             </a>
 
         </li>
         <li>
-            <a href="#">
-                <i class="fas fa-image"></i>
-                Portfolio
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="fas fa-question"></i>
-                FAQ
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="fas fa-paper-plane"></i>
+            <a href="#contact" id="contactBtn">
+                <i class="fas fa-address-card"></i>
                 Contact
+            </a>
+        </li>
+        <li>
+            <a href="#ticket" id="ticketBtn">
+                <i class="fas fa-inbox"></i>
+                Tickets
+            </a>
+        </li>
+        <li>
+            <a href="#settings" id="settingBtn">
+                <i class="fas fa-cog"></i>
+                Settings
+            </a>
+        </li>
+    </ul>
+    <div class="line"></div>
+    <ul class="list-unstyled components">
+        <li>
+            <a href="#">
+                <i class="fas fa-sign-out-alt"></i>
+                Sign Out
             </a>
         </li>
     </ul>
