made the ticket handlebars file, added the route to the server js and linked it to the button in side bar

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -24,7 +24,7 @@
             </a>
         </li>
         <li>
-            <a href="#ticket" id="ticketBtn">
+            <a href="/ticket" id="ticketBtn">
                 <i class="fas fa-inbox"></i>
                 Tickets
             </a>
