made the setting handlebar file, add the route into the server and the index file and the nav bar. Currently just fixing the tabs and adding content into them

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -30,7 +30,7 @@
             </a>
         </li>
         <li>
-            <a href="#settings" id="settingBtn">
+            <a href="/settings" id="settingBtn">
                 <i class="fas fa-cog"></i>
                 Settings
             </a>
