added the job title to the sidebar and now it is hidden when you make the sidebar smaller

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -52,7 +52,8 @@ span {
 }
 
 #sidebar.active .sidebar-header h3,
-#sidebar.active #profileImage {
+#sidebar.active #profileImage,
+#sidebar.active #jobTitle {
   display: none;
 }
 
