--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -5,7 +5,9 @@
         <img src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png"
             alt="" id="profileImage">
         <h3>John Smith</h3>
+        <div id="jobTitle">Sales Representative</div>
         <strong>JS </strong>
+
     </div>
 
     <ul class="list-unstyled components">
