--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,8 +5,8 @@ background: rgb(148,161,217);
 background: linear-gradient(90deg, rgba(148,161,217,1) 0%, rgba(231,234,250,1) 31%, rgba(249,249,255,1) 89%, rgba(249,249,255,1) 91%, rgba(255,255,255,1) 100%, rgba(231,234,250,1) 100%, rgba(148,161,217,1) 100%);
     height: 100vh;
   }
-  #login .container #login-row #login-column #login-box {
-    margin-top: 120px;
+  #login #logincontainer #login-row #login-column #login-box {
+    margin-top: 75px;
     max-width: 600px;
     height: 320px;
     border: 3px solid rgb(195, 178, 206);
@@ -15,12 +15,20 @@ background: linear-gradient(90deg, rgba(148,161,217,1) 0%, rgba(231,234,250,1) 3
     background: rgb(249,249,255);
 background: linear-gradient(90deg, rgba(249,249,255,1) 6%, rgba(249,249,255,1) 12%, rgba(255,255,255,1) 100%);
   }
-  #login .container #login-row #login-column #login-box #login-form {
+  #login #logincontainer #login-row #login-column #login-box #login-form {
     padding: 20px;
   }
-  #login .container #login-row #login-column #login-box #login-form #register-link {
+  #login #logincontainer #login-row #login-column #login-box #login-form #register-link {
     margin-top: -85px;
   }
-.container {
+  #logincontainer {
     opacity: .8;
+}
+
+#signinlogo {
+    width:100px; 
+    height:100px;
+}
+img {
+    margin-top: 50px;
 }
