--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,11 @@
+
 <div id="login">
     <h2 class="text-center text-dark pt-5" id="head">Welcome back!
         <small class="text-muted" id="head1">Please sign in.</small></h2>
-    <div class="container">
+    <div class="container" id="logincontainer">
+        <div class="text-center mt-3">
+        <img src="assets/images/LogoMakr_2sOGNn.png" id="signinlogo">
+        </div>
          <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
