--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
     {{> navbar/nav-block}}
 
     <!-- Page Content  -->
-    <div class="container content" id="home">
+    <div class="content" id="home">
 
         {{> toggle/toggle-block}}
 
