--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -1,6 +1,17 @@
 <!-- Sidebar  -->
 
 <nav id="sidebar">
+
+    <div class="logo text-center">
+        <a href="#">
+            <img src="assets/images/LogoMakr_2sOGNn.png" width="40" height="40" alt="">
+            <div id="brandName">
+                CRM NAME
+            </div>
+        </a>
+    </div>
+
+
     <div class="sidebar-header text-center">
         <img src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png"
             alt="" id="profileImage">
