--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -30,7 +30,7 @@
     rgba(255, 255, 255, 1) 100%
   );
 }
-#login .container #login-row #login-column #login-box #login-form {
+#login .container #login-row #login-column #login-box #login-form #admin-form {
   padding: 20px;
 }
 #login
@@ -39,6 +39,7 @@
   #login-column
   #login-box
   #login-form
+  #admin-form
   #register-link {
   margin-top: -85px;
 }
