--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -17,9 +17,11 @@
                         {{!-- <div class="form-group" id="remember">
                             <label for="remember-me" class="text-dark"><span>Remember me</span> <span><input
                                         id="remember-me" name="remember-me" type="checkbox"></span></label><br> --}}
-                        <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                        <input type="submit" name="submit" class="btn btn-info btn-md" value="Add User">
                     </form>
-
+                    <a href="/logout"><button type="btn btn-info btn-md">Logout</button></a>
+                    <br>
+                    <p id="admin_msg"></p>
                 </div>
             </div>
         </div>
