--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,12 +1,11 @@
-{{!-- <div id="login">
-    <h2 class="text-center text-dark pt-5" id="head">Welcome back!
-        <small class="text-muted" id="head1">Please sign in.</small></h2>
+<div id="admin">
+    <h2 class="text-center text-dark pt-5" id="head">Admin Portal</h2>
     <div class="container">
-         <div id="login-row" class="row justify-content-center align-items-center">
+        <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
-                    <form id="login-form" class="form" action="" method="post">
-                        <h3 class="text-center text-dark"><u>Login</u></h3>
+                    <form id="admin-form" class="form">
+                        <h3 class="text-center text-dark"><u>Add User</u></h3>
                         <div class="form-group">
                             <label for="username" class="text-dark">Username:</label><br>
                             <input type="text" name="username" id="username" class="form-control" required>
@@ -15,13 +14,17 @@
                             <label for="password" class="text-dark">Password:</label><br>
                             <input type="password" name="password" id="password" class="form-control" required>
                         </div>
-                         {{!-- <div class="form-group" id="remember">
+                        {{!-- <div class="form-group" id="remember">
                             <label for="remember-me" class="text-dark"><span>Remember me</span> <span><input
                                         id="remember-me" name="remember-me" type="checkbox"></span></label><br> --}}
-<input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-</form>
+                        <input type="submit" name="submit" class="btn btn-info btn-md" value="Add User">
+                    </form>
+                    <a href="/logout"><button type="btn btn-info btn-md">Logout</button></a>
+                    <br>
+                    <p id="admin_msg"></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-</div>
-</div>
-</div>
-</div> --}}
+<script src="/assets/js/admin.js"></script>
