fixed authentication functions

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,5 @@
 <h1>You Just logged in. Welcome to Dashboard</h1>
 <hr>
 <h2>Current User: {{currentUser}}</h2>
+<a href="/settings"><button type="button">Settings</button></a>
 <a href="/logout"><button type="button">Logout</button></a>
