--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -1,19 +1,19 @@
 <div class="container">
     <h1>File Upload</h1>
     {{msg}}
-    <form action="/upload" , method="POST" enctype="multipart/form-data">
+    <form action="/upload" method="POST" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="exampleFormControlFile1">File input</label>
-            <input type="file" name="profile" class="form-control-file" id="exampleFormControlFile1">
+            <label for="ProfileImage">File input</label>
+            <input type="file" class="form-control-file" name="myImage">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    {{#if file}}
+    {{!-- {{#if file}} 
     <img src={{file}} class="img-fluid">
     {{/if}}
-    {{#unless file}}
-    <img src="https://images-test-hss.s3.us-east-2.amazonaws.com/ProfileImgs/default.jpg" class="img-fluid">
-    {{/unless}}
+    {{#unless file}} --}}
+    <img src={{img}} class="img-fluid">
+    {{!-- {{/unless}} --}}
     <a href="/"><button type="button">Dashboard</button></a>
 
 </div>
