made it so that the side bar will open when the mouse is hovered on

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -6,7 +6,7 @@
         <a href="#">
             <img src="assets/images/LogoMakr_1WwSOv.png" width="40" height="40" alt="">
             <div id="brandName">
-                CRM NAME
+                impact x
             </div>
         </a>
     </div>
@@ -26,26 +26,29 @@
         <li>
             <a href="#home" id="dashBtn">
                 <i class="fas fa-th-large"></i>
-                Dashboard
+                <span class="btnName">Dashboard</span>
             </a>
 
         </li>
         <li>
             <a href="#contact" id="contactBtn">
                 <i class="fas fa-address-card"></i>
-                Contact
+                <span class="btnName">Contact</span>
+            </a>
             </a>
         </li>
         <li>
             <a href="#ticket" id="ticketBtn">
                 <i class="fas fa-inbox"></i>
-                Tickets
+                <span class="btnName">Tickets</span>
+            </a>
             </a>
         </li>
         <li>
             <a href="#settings" id="settingBtn">
                 <i class="fas fa-cog"></i>
-                Settings
+                <span class="btnName">Settings</span>
+            </a>
             </a>
         </li>
     </ul>
