--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,7 +14,7 @@ a:hover,
 a:focus {
   color: inherit;
   text-decoration: none;
-  transition: all 0.3s;
+  transition: all 0.5s;
 }
 
 .line {
@@ -39,31 +39,38 @@ span {
 }
 
 #sidebar {
-  min-width: 275px;
-  max-width: 275px;
+  min-width: 100px;
+  max-width: 100px;
   background: #7a6eb8;
   color: #fff;
   transition: all 0.3s;
 }
 
 #sidebar.active {
-  min-width: 90px;
-  max-width: 90px;
+  min-width: 275px;
+  max-width: 275px;
+}
+
+#sidebar .sidebar-header h3,
+#sidebar #profileImage,
+#sidebar #jobTitle,
+#sidebar #brandName {
+  display: none;
 }
 
 #sidebar.active .sidebar-header h3,
 #sidebar.active #profileImage,
 #sidebar.active #jobTitle,
 #sidebar.active #brandName {
-  display: none;
+  display: inline-block;
 }
 
 #sidebar.active .sidebar-header strong {
-  display: block;
+  display: none;
 }
 
-#sidebar ul li a {
-  text-align: left;
+#sidebar ul li a i {
+  text-align: center;
 }
 
 #sidebar.active ul li a {
@@ -72,14 +79,21 @@ span {
   font-size: 0.85em;
 }
 
-#sidebar.active ul li a i {
+#sidebar ul li a i {
   margin-right: 0;
   display: block;
   font-size: 1.8em;
   margin-bottom: 5px;
 }
 
-#sidebar.active .dropdown-toggle::after {
+#sidebar.active ul li a {
+  margin-right: 0;
+  display: block;
+  font-size: 1.8em;
+  margin-bottom: 5px;
+}
+
+#sidebar .dropdown-toggle::after {
   top: auto;
   bottom: 10px;
   right: 50%;
@@ -100,7 +114,7 @@ span {
 }
 
 #sidebar .sidebar-header strong {
-  display: none;
+  /* display: none; */
   font-size: 1.8em;
 }
 
@@ -130,4 +144,12 @@ span {
 
 #brandName {
   font-size: xx-large;
+}
+
+.btnName {
+  display: none;
+}
+
+#sidebar.active .btnName {
+  display: inline-block;
 }
