changed some styling and added the company name

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -5,7 +5,8 @@
     <div class="logo text-center">
         <a href="#">
             <img src="assets/images/LogoMakr_1WwSOv.png" width="40" height="40" alt="">
-            <div id="brandName">
+
+            <div class="ml-2" id="brandName">
                 impact x
             </div>
         </a>
