removed the a tag from navbar and gave signout the class of btnName, gave the sidebar a shodow so it will stand out more

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -3,13 +3,15 @@
 <nav id="sidebar">
 
     <div class="logo text-center">
-        <a href="#">
-            <img src="assets/images/LogoMakr_1WwSOv.png" width="40" height="40" alt="">
+        {{!-- <a href="#"> --}}
+        <div id="brandName">
+            impact x
+        </div>
+        <div> <img src="assets/images/LogoMakr_1WwSOv.png" width="40" height="40" alt=""></div>
 
-            <div class="ml-2" id="brandName">
-                impact x
-            </div>
-        </a>
+
+
+        {{!-- </a> --}}
     </div>
 
 
@@ -58,7 +60,7 @@
         <li>
             <a href="#">
                 <i class="fas fa-sign-out-alt"></i>
-                Sign Out
+                <span class="btnName">Sign Out</span>
             </a>
         </li>
     </ul>
