--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
   background: #fafafa;
+  position: relative;
 }
 
 p {
@@ -14,7 +15,7 @@ a:hover,
 a:focus {
   color: inherit;
   text-decoration: none;
-  transition: all 0.7s;
+  transition: all 0.6s;
 }
 
 .line {
@@ -39,16 +40,19 @@ span {
 }
 
 #sidebar {
-  min-width: 100px;
-  max-width: 100px;
+  min-width: 90px;
+  max-width: 90px;
   background: #7a6eb8;
   color: #fff;
-  transition: all 0.3s;
+  transition: all 0.7s;
 }
 
 #sidebar.active {
-  min-width: 275px;
-  max-width: 275px;
+  min-width: 250px;
+  max-width: 250px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
 }
 
 #sidebar .sidebar-header h3,
