--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -18,9 +18,12 @@
     <div class="sidebar-header text-center">
         <img src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png"
             alt="" id="profileImage">
-        <h3>John Smith</h3>
+
+
+
+        <h3>{{currentUser}}</h3>
         <div id="jobTitle">Sales Representative</div>
-        <strong>JS </strong>
+        <strong>{{currentUser.[0]}} </strong>
 
     </div>
 
@@ -48,7 +51,7 @@
             </a>
         </li>
         <li>
-            <a href="#settings" id="settingBtn">
+            <a href="/settings" id="settingBtn">
                 <i class="fas fa-cog"></i>
                 <span class="btnName">Settings</span>
             </a>
@@ -58,7 +61,7 @@
     <div class="line"></div>
     <ul class="list-unstyled components">
         <li>
-            <a href="#">
+            <a href="/logout">
                 <i class="fas fa-sign-out-alt"></i>
                 <span class="btnName">Sign Out</span>
             </a>
