--- a/views/partials/toggle/toggle-block.handlebars
+++ b/views/partials/toggle/toggle-block.handlebars
@@ -1,3 +1,5 @@
-<button type="button" id="sidebarCollapse" class="btn btn-dark my-4">
+{{!-- <button type="button" id="sidebarCollapse" class="btn btn-dark my-4">
     <i class="fas fa-bars"></i>
-</button>
+</button> --}}
+
+{{!-- Do not need any longe I believe! -NG --}}
