--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,128 @@
+<h2 class="display-4">Client List</h2>
 
 
 
-<ul class="list-group">
-  <li class="list-group-item list-group-item-primary">Customer List</li>
+<div class="clientlist">
+    <div class="container-tableclient">
+        <div class="wrap-tableclient">
+            <div class="tableclient m-b-110">
+                <div class="tableclient-head">
+                    <div class="active-purple-3 active-purple-4 mb-4">
+                        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                    </div>
+                    <table>
+                        <thead>
 
-  
-<li class="list-group-item list-group-item-dark">This is a dark list group item</li>
-  <li class="list-group-item list-group-item-dark">This is a dark list group item</li>
-  <li class="list-group-item list-group-item-dark">This is a dark list group item</li>
-  <li class="list-group-item list-group-item-dark">This is a dark list group item</li>
-  <li class="list-group-item list-group-item-dark">This is a dark list group item</li>
-  <li class="list-group-item list-group-item-dark">This is a dark list group item</li>
-  <li class="list-group-item list-group-item-dark">This is a dark list group item</li>
-</ul>
+                            <tr class="rowclient head">
+                              
+                                <th class="cellclient column1">Name </th>
+                                <th class="cellclient column2">Email</th>
+                                <th class="cellclient column3">Phone Number</th>
+                                <th class="cellclient column4">Sales Amount</th>
+                                <th class="cellclient column5">Other...</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+
+                <div class="tableclient-body js-pscroll">
+                    <table>
+                        <tbody>
+                            <tr class="rowclient body">
+                                
+                       
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                      
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                            <tr class="rowclient body">
+                                <td class="cellclient column1">Placeholder</td>
+                                <td class="cellclient column2">Example@example.com</td>
+                                <td class="cellclient column3">8675309</td>
+                                <td class="cellclient column4">5 million</td>
+                                <td class="cellclient column5">example</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
