--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     <script src="/assets/js/crm.js"></script>
     <title>...</title>
+    <link rel="icon" href="/assets/images/LogoMakr_1WwSOv.png">
 </head>
 <body>
     {{{ body }}}
