--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -16,8 +16,7 @@
 
 
     <div class="sidebar-header text-center">
-        <img src="https://www.pngitem.com/pimgs/m/30-307416_profile-icon-png-image-free-download-searchpng-employee.png"
-            alt="" id="profileImage">
+        <img src={{img}} alt="" id="profileImage">
 
 
 
@@ -30,7 +29,7 @@
     <ul class="list-unstyled components">
 
         <li>
-            <a href="#home" id="dashBtn">
+            <a href="/" id="dashBtn">
                 <i class="fas fa-th-large"></i>
                 <span class="btnName">Dashboard</span>
             </a>
